Adding api calls for Admin
