# capstone-web/src/main/java/am/capstone/project/controller/AdministratorController.java
@@ -1,12 +1,18 @@
 package am.capstone.project.controller;
 
 
+import am.capstone.project.model.Administrator;
+import am.capstone.project.model.Instructor;
 import am.capstone.project.service.AdministratorService;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import java.util.Set;
 
-@RequestMapping("/administrators")
+@RequestMapping("api/administrators")
 @Controller
 public class AdministratorController {
 
@@ -21,5 +27,20 @@ public class AdministratorController {
     public String administratorsIndex(Model model) {
         model.addAttribute("administrators", administratorService.findAll());
         return "administrators/index";
+    }
+
+    @GetMapping
+    public Set<Administrator> getAllAdministrators() {
+        return administratorService.findAll();
+    }
+
+    @GetMapping("/{id}")
+    public Administrator getAdministratorById(Long id) {
+        return administratorService.findById(id);
+    }
+
+    @PostMapping
+    public Administrator createAdministrator(@RequestBody Administrator administrator) {
+        return administratorService.save(administrator);
     }
 }
